  - bugfixes
  - sim, envir, nedc, plove, gned, utils placed into a src subdirectory
#40 May 12, 1998
  - bugfixes
  - mklinks added
#41 May 21, 1998
  - prephtml added
#42 June 4, 1998
  - small corrections on prephtml and configure
#43 June 15, 1998
  - makemake rewritten. Accepts several command-line options, can handle
    source trees etc.
#44 July 2, 1998
  - makemake revisited; configure improved too
#45 July 15, 1998
  - html/ directory moved one level up: omnetpp/html/
  - prephtml fixed: two-level table of contents
  - several small fixes
#46 August 14, 1998
  - small fixes
#47 August 16, 1998
  - fixes on the install scripts
#48 August 16, 1998
  - support for the models/ directory
  - configure now puts OMNETPP_ROOT-relative paths into the makefiles etc.
#49 Dec 30, 1998
  - configure script improved;
  - DYNAMIC_LINKAGE config flag renamed to USE_DLOPEN
  - configure now creates makefile out of makefile.in
  - makefile renamed to makefile.in
#50 Jan 1, 1999
  - fifo2 sample added to install.bat; fifo renamed to fifo1
  - misc fixes
  - 'convert' script removed
#51 Jan 25, 1999
  - minor changes
#52 June 21, 1999
  - all sources checked in under CVS
  - makefile.in modified for use with GNU Autoconf; also renamed to Makefile.in
  - version.log renamed to ChangeLog
  - cleanup: removed a number of old scripts
  - tcl2c.c moved here
July 17, 1999
  - seedtool help text changed
------ omnetpp-2.0b released ------
Oct 10, 1999
  - makemake: better error handling with recursive makefiles; EXE_SUFFIX added
  - tcl2c.c: encoding simplified (old one was unnecessarily complicated and
    didn't work under cygwin)
------ omnetpp-2.0b2 released ------
Dec 5,1999
  - Makefile.vc added
------ omnetpp-2.0b3 released ------
Apr 10, 2000
 - TRUE/FALSE (defines) replaced by true/false (C++ keywords)
Apr 16, 2000
 - prephtml script enhanced: now it splits up the manual to several HTML files
   (usman.html, toc.html plus chapN.html files); it also adds heading numbering.